--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "node_app_server",
   "version": "1.0.0",
   "description": "This a server",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon index.js"
+    "start": "nodemon server.js"
   },
   "author": "Aritra Manna",
   "license": "ISC",
